2010-10-15  Tassilo Horn  <tassilo@member.fsf.org>

	* Makefile.in (really-oldXMenu): Fix typo in variable name that
	made building the X menu fail.
	(really-oldXMenu): Fix my previous fix.

2010-10-14  Damyan Pepper  <damyanp@gmail.com>

	Fix handling of font properties on Windows (bug#6303).
	* font.c (font_filter_properties): New function, refactored from
	ftfont_filter_properties.
	* font.h (font_filter_properties): Declare.
	* ftfont.c (ftfont_filter_properties): Use font_filter_properties.
	* w32font.c (w32font_booleans, w32font_non_booleans): New variables.
	(w32font_filter_properties): New function.
	(w32font_driver): Add w32font_filter_properties.

2010-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* font.c (Ffont_variation_glyphs):
	* ccl.c (Fccl_execute_on_string): Fix typo in docstring.

2010-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (w32_wnd_proc, file_dialog_callback):
	* w32font.c (w32_generic_family):
	* w32inevt.c (key_event):
	* w32menu.c (fill_in_menu):
	* w32proc.c (reader_thread, w32_executable_type, compare_env)
	(merge_and_sort_env, int_from_hex, enum_locale_fn, enum_codepage_fn):
	* w32term.c (w32_read_socket): Make static.

2010-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* image.c (DEF_IMGLIB_FN): Add argument to adapt to strict
	prototypes; all callers changed.

2010-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (TLIB2): Rename from TLIBW32.
	(OBJ2): New macro.
	(WIN32OBJ, FONTOBJ): Remove.
	(OBJ1): Redistribute object files with OBJ2.
	(LIBS, $(TEMACS)): Use TLIB2.
	(make-buildobj-CMD, make-buildobj-SH): Use OBJ2.
	($(TLIB2), TAGS, TAGS-LISP, TAGS-gmake): Depend on OBJ2.

2010-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* emacs.c (Vdynamic_library_alist)
	(syms_of_emacs) <dynamic-library-alist>: Move from image.c and rename.
	Doc fix.

	* lisp.h (Vdynamic_library_alist): Declare extern.

	* image.c (Vimage_library_alist)
	(syms_of_image) <image-library-alist>: Move to emacs.c and rename.